bad/var_decl_noinit_null.example_compiler_output
ERROR
[1mbad/var_decl_noinit_null.lat:3:7: [1;31merror: [0;1msyntax error at x[m
	null x;
	     [1;32m^[m
